<resources>
    <string name="app_name">AomTung</string>
    <string name="type_phone">+66</string>
    <string name="hint_phone">063xxxxxxx</string>
    <string name="get_otp">รับรหัส OTP</string>
    <string name="submit">ยืนยัน</string>
    <string name="d">ดำเนินการ</string>
    <string name="cancle">ยกเลิก</string>
    <string name="note">โน้ต</string>
    <string name="complete">เสร็จสิ้น</string>
    <string name="note_hint">ไม่จำเป็นต้องระบุ</string>
    <string name="fingerprint">ลายนิ้วมือ</string>
    <string name="faceId">แสกนใบหน้า</string>
    <string name="selectMonth">เลือกเดือน</string>
    <string name="selectYear">เลือกปี</string>
    <string name="december66">ธันวาคม</string>
    <string name="changePassword">เปลี่ยนรหัสผ่าน </string>
    <string name="hint_name">ตัวอย่าง : หน้าตาดี ทรัพย์จาง </string>
    <string name="input_name">กรอกชื่อของคุณ</string>
    <string name="skip">ข้าม</string>
    <string name="input_phone">ระบุหมายเลขโทรศัพท์</string>
    <string name="input_otp">ระบุรหัส OTP ที่ได้รับจากเบอร์</string>
    <string name="re_input_otp">กรุณากรอกภายใน</string>
    <string name="re_input_otp_second">วินาที</string>
    <string name="second">  00:58</string>
    <string name="set_pinCode">ตั้งรหัส PIN</string>
    <string name="ConfirmPincode">ยืนยัน PIN</string>
    <string name="FOrgotPincode">ลืมรหัสผ่าน </string>
    <string name="pincodeDidntMatch">PIN  ไม่ถูกต้อง โปรดลองอีกครั้ง</string>
    <string name="alert">แจ้งเตือน</string>
    <string name="type">ประเภท</string>
    <string name="autoSave">บันทึกอัตโนมัติ</string>
    <string name="salary">เงินเดือน</string>
    <string name="transactions">การทำธุรกรรม</string>
    <string name="rent">ค่าเช่า</string>
    <string name="family">ครอบครัวช่วยเหลือ</string>
    <string name="snack">ค่าขนม</string>
    <string name="asset">สินทรัพย์</string>
    <string name="gift">ของขวัญ</string>
    <string name="other">อื่นๆ</string>
    <string name="interest">ดอกเบี้ย/เงินปันผล</string>
    <string name="bonus">ค่าล่วงเวลา หรือ โบนัส</string>
    <string name="extraIncome">รายได้พิเศษ</string>
    <string name="businessIncome">รายได้จากธุรกิจ</string>
    <string name="necessaryExpenses">รายจ่ายจำเป็น</string>
    <string name="unnecessaryExpenses">รายจ่ายไม่จำเป็น</string>
    <string name="signOut">คุณต้องการออกจากระบบ ?</string>
    <string name="deleteAccount">คุณแน่ใจ ว่าต้องการลบบัญชี ?</string>
    <string name="save">บันทึก</string>
    <string name="delete1">แจ้งให้ทราบ ถ้าคุณลบบัญชีแล้วจะไม่สามารถกู้บัญชีคืนได้</string>
    <string name="delete3">ท่านต้องการดำเนินการนี้หรือไม่?</string>
    <string name="delete2">หากท่านยืนยันที่จะดำเนินการลบบัญชีควรทราบว่ากระบวนการนี้ไม่สามารถย้อนกลับได้โปรดควรพิจารณาอย่างรอบคอบก่อนดำเนินการท่านจะไม่สามารถกู้คืนบัญชีได้เนื่องจากข้อมูลภายในบัญชีทั้งหมดจะถูกลบหลังจากดำเนินการเสร็จสมบูรณ์แล้วอย่างถาวร </string>
    <string name="amount">เหลืออีก</string>
    <string name="character">ตัวอักษร</string>
    <string name="not_found_data">ยังไม่มีข้อมูล</string>
    <string name="pastList">รายการย้อนหลัง</string>
    <string name="otp_dint_match">รหัส OTP ของคุณไม่ถูกต้อง </string>
    <string name="okay">OK</string>
    <string name="ok">ตกลง</string>
    <string name="none">ไม่มี</string>
    <string name="balance">คงเหลือ (บาท)</string>
    <string name="sum">ยอดรวม</string>
    <string name="balance_money">0.00</string>
    <string name="income_bath">รายรับ (บาท)</string>
    <string name="income">รายรับ</string>
    <string name="expends_bath">รายจ่าย (บาท)</string>
    <string name="expends">รายจ่าย</string>
    <string name="addList">เพิ่มรายการ</string>
    <string name="fix">แก้ไข</string>
    <string name="calculator">เครื่องคิดเลข</string>
    <string name="b">฿</string>
    <string name="everyday">ทุกวัน</string>
    <string name="every_week">ทุกสัปดาห์</string>
    <string name="every_month">ทุกเดือน</string>
    <string name="every_3month">ทุก 3 เดือน</string>
    <string name="category">หมวดหมู่</string>
    <string name="securityAndPassword">รหัสผ่านและความปลอดภัย</string>
    <string name="wellcome">ยินดีต้อนรับ !</string>
    <string name="you">คุณ</string>
    <string name="digits">0123456789,abcdefghijklmnopqrstuvwxyz , ี  ึ  ื ก ข ฃ ค ฅ ฆ ง จ ฉ ช ซ ฌ ญ ฎ ฏ ฐ ฑ ฒ ณ ด ต ถ ท ธ น บ ป ผ ฝ พ ฟ ภ ม ย ร ล ว ศ ษ ส ห ฬ อ ฮ,ะ  ั  ็ า  ิ ๊ ๆ ๋ ่ ่ ่ ํ ุ ู ์ เ ใ ไ โ อ ย ว ฤ ฤๅ ฦ ฦๅ </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>


















