<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.money.moneyx.login.loginScreen.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".login.NameInput.NameInputActivity">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_name"
            android:textSize="25sp"
            android:fontFamily="@font/sukhumvit_set_text"
            android:textColor="@color/black"
            android:layout_marginBottom="34dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_radius_outline"
            android:ems="10"
            android:fontFamily="@font/sukhumvit_set_text"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:digits="@string/digits"
            android:maxLength="50"
            android:paddingVertical="15dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="55dp"
            android:fontFamily="@font/sukhumvit_set_text"
            android:onClick="@{() -> loginViewModel.clickSkip()}"
            android:padding="5dp"
            android:text="@string/skip"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" />

        <Button
            android:id="@+id/buttonSubmitName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/border_radius"
            android:backgroundTint="@color/gray"
            android:enabled="false"
            android:fontFamily="@font/sukhumvit_set_text"
            android:onClick="@{() -> loginViewModel.clickSubmitName()}"
            android:selectAllOnFocus="true"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
           />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>