<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dropdown_background">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/line"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/createText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/type"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:layout_marginStart="20dp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="20dp"

            >

            <TextView
                android:id="@+id/necessary_expenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/necessaryExpenses"
                android:fontFamily="@font/sukhumvit_set_text"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:paddingVertical="15dp"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/Unnecessary_expenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unnecessaryExpenses"
                android:fontFamily="@font/sukhumvit_set_text"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:paddingVertical="15dp"
                android:layout_marginBottom="5dp"
                />
        </LinearLayout>

    </LinearLayout>
</layout>
