<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dropdown_background">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/line"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                 />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/createText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:text="@string/note"
                android:textColor="@color/black"
                android:textSize="25dp"

                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/character"
                    android:layout_marginEnd="22dp"
                    android:textSize="12sp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/sukhumvit_set_text"
                    android:textColor="@color/button_disable"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                     />

                <TextView
                    android:id="@+id/textCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="50"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/sukhumvit_set_text"
                    android:textColor="@color/button_disable"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView37"
                    />

                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:layout_marginEnd="5dp"
                    android:textSize="12sp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/sukhumvit_set_text"
                    android:textColor="@color/button_disable"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textCount"

                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/borderNote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_radius"
            android:layout_marginBottom="40dp"
            android:layout_marginHorizontal="22dp"
            >


            <EditText
                android:id="@+id/textNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="22dp"
                android:hint="@string/note_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textSize="18sp"
                android:textColor="@color/appbarListAdd"
                android:maxLength="50"
                android:paddingVertical="30dp"
                android:layout_margin="5dp"
                android:textAlignment="viewStart"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@drawable/border_radius"
            android:backgroundTint="@color/button"
            android:fontFamily="@font/sukhumvit_set_text"
            android:selectAllOnFocus="true"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="25dp"

            />


    </LinearLayout>
</layout>
